<resources>
    <string name="app_name">FilmFlick</string>
    <string name="hint_upperbox_width">Upperbox Width</string>
    <string name="hint_upperbox_length">Upperbox Length</string>
    <string name="hint_middlebox_width">Middlebox Width</string>
    <string name="hint_middlebox_length">Middlebox Length</string>
    <string name="hint_lowerbox_width">Lowerbox Width</string>
    <string name="hint_lowerbox_length">Lowerbox Length</string>
    <string name="peso_sign">₱</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theatre_selection">Theatre Selection</string>
    <string name="movie_selection">Movie Selection</string>
    <string name="movie_details">Movie Details</string>
</resources>
