<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.admin.a_cinemas.AddCinemaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_addCinema"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="Add a Cinema"
                android:textSize="24dp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/red_400" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rl_logo"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_CinemaLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cinema Location"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="334dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rl_logo"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cinemaName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Cinema Name"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="334dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="73dp"
                    android:layout_gravity=""
                    android:layout_margin="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="Add an Image"
                    android:src="@drawable/add" />

                <ImageView
                    android:id="@+id/iv_selectedImage"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_weight="1"
                    android:src="@drawable/filmflick_logo_final1" />

            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/red_400" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout9"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rl_logo"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_numOfTheatres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Number of Theatres"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="334dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_upperLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_upperbox_length" />

                <EditText
                    android:id="@+id/input_upperWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_upperbox_width" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_middleLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_middlebox_length" />

                <EditText
                    android:id="@+id/input_middleWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_middlebox_width" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/input_lowerLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_lowerbox_length" />

                <EditText
                    android:id="@+id/input_lowerWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/hint_lowerbox_width" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_addCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Cinema!"
        android:backgroundTint="@color/red_400"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>